@@ -1,3 +1,7 @@
+2005-11-11  Miguel de Icaza  <miguel@novell.com>
+
+	* StringBuilder.cs (Text): Added serialization support in 2.x. 
+
 2005-10-22  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* UTF8Encoding.cs (InternalGetChars/InternalGetCharCount): Fix lead byte
